Initial Astro Setup

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,8 @@
 ---
+import Welcome from '../components/Welcome.astro';
+import Layout from '../layouts/Layout.astro';
 ---
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Ad Restore</title>
-  </head>
-  <body>
-    <h1>Ad Restore</h1>
-    <p>Astro is live.</p>
-  </body>
-</html>
+
+<Layout>
+	<Welcome />
+</Layout>
